FE:style: fix the error styling with dark mode

--- a/src/components/meetup/MeetupReviewItem.module.scss
+++ b/src/components/meetup/MeetupReviewItem.module.scss
@@ -3,7 +3,6 @@
 .review {
   display: flex;
   border-radius: 0.3rem;
-  border-bottom: 0.01rem solid clr(white-clr, dark);
   padding: 0.4rem;
 
   > img {
@@ -12,10 +11,12 @@
 
   &.light {
     background-color: clr(white-clr, light);
+    border-bottom: 0.01rem solid clr(white-clr, dark);
   }
 
   &.dark {
-    background-color: clr(white-clr, light);
+    background-color: clr(tertiary-clr, light);
+    border-bottom: 0.01rem solid clr(tertiary-clr, dark);
   }
 }
 
